[package]
name = "syntax-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "reborrow_demo"
path = "src/bin/borrow_lab/reborrow_demo.rs"

[[bin]]
name = "zip_demo"
path = "src/bin/iterator_lab/zip_demo.rs"

[[bin]]
name = "closure_demo"
path = "src/bin/iterator_lab/closure_demo.rs"
