[package]
name = "syntax-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "reborrow_demo"
path = "src/bin/borrow_lab/reborrow_demo.rs"

[[bin]]
name = "zip_demo"
path = "src/bin/iterator_lab/zip_demo.rs"

[[bin]]
name = "closure_demo"
path = "src/bin/iterator_lab/closure_demo.rs"

[[bin]]
name = "collect_demo"
path = "src/bin/iterator_lab/collect_demo.rs"

[[bin]]
name = "fold_demo"
path = "src/bin/iterator_lab/fold_demo.rs"

[[bin]]
name = "cons_demo"
path = "src/bin/smart_pointer_lab/box/cons_demo.rs"

[[bin]]
name = "type_demo"
path = "src/bin/smart_pointer_lab/box/type_demo.rs"

[[bin]]
name = "str_demo"
path = "src/bin/smart_pointer_lab/box/str_demo.rs"

[[bin]]
name = "slice_demo"
path = "src/bin/slice_lab/slice_demo.rs"

[[bin]]
name = "slice_demo2"
path = "src/bin/slice_lab/slice_demo2.rs"

[[bin]]
name = "box_demo"
path = "src/bin/smart_pointer_lab/deref_lab/box_demo.rs"

[[bin]]
name = "drop_demo"
path = "src/bin/smart_pointer_lab/drop_demo.rs"

[[bin]]
name = "cell_demo"
path = "src/bin/smart_pointer_lab/cell/scenario.rs"

[[bin]]
name = "usage"
path = "src/bin/smart_pointer_lab/cell/usage.rs"

[[bin]]
name = "demo"
path = "src/bin/smart_pointer_lab/ref_cell/demo.rs"


# lifecycle
[[bin]]
name = "struct_demo"
path = "src/bin/lifecycle_lab/struct_demo.rs"
[[bin]]
name = "func_demo"
path = "src/bin/lifecycle_lab/func_demo.rs"